--- a/src/game.css
+++ b/src/game.css
@@ -10,7 +10,14 @@ body {
 #player-stats {
   display: flex;
   flex-direction: column;
-  height: 200px;
   width: 400px;
   text-align: center;
+}
+
+#player-history {
+  display: flex;
+  flex-direction: column;
+  width: 400px;
+  height: 200px;
+  overflow-y: auto;
 }
