--- a/src/game.css
+++ b/src/game.css
@@ -11,14 +11,43 @@ body {
 #player-stats {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 500px;
   text-align: center;
 }
 
 #player-history {
   display: flex;
   flex-direction: column;
-  width: 400px;
+  width: 500px;
   height: 200px;
   overflow-y: auto;
+}
+
+.flex-center {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+.bar-container {
+  width: 100px;
+  height: 15px;
+  background-color: white;
+  border: 1px solid black;
+}
+
+#health-bar {
+  width: 100%;
+  height: 15px;
+  background-color: red;
+}
+
+#experience-bar {
+  width: 100%;
+  height: 15px;
+  background-color: green;
+}
+
+.stat-display {
+  width: 150px;
 }
