--- a/src/game.css
+++ b/src/game.css
@@ -1,6 +1,13 @@
 body {
   color: black;
   overflow: hidden;
+  margin: 0;
+  display: flex;
+  place-items: center;
+  justify-content: center;
+  min-width: 320px;
+  min-height: 100vh;
+  background-color: white;
 }
 
 #game {
