--- a/src/game.css
+++ b/src/game.css
@@ -58,3 +58,31 @@ body {
 .stat-display {
   width: 150px;
 }
+
+#modal {
+  height: 500px;
+  width: 500px;
+  text-align: center;
+  white-space: pre;
+  border: 2px solid black;
+  background-color: white;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+}
+
+/* Ripped off of bootstrap */
+button {
+  border: 1px solid transparent;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  line-height: 1.5;
+  border-radius: 0.25rem;
+  cursor: pointer;
+}
+
+.green {
+  background-color: green;
+  color: white;
+}
